# Medo

./: .PackageInfo  .gitignore  CMakeLists.txt  Jamfile  LICENSE  README.md  build_addons  clean_all  create_package  setup_attributes
Actor/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  ActorTimer.cpp  Platform.h  Platform_Haiku.cpp  Timer.cpp  Timer.h  WorkThread.cpp  WorkThread.h
AddOns/ChromaKey/: CMakeLists.txt  Effect_ChromaKey.cpp  Effect_ChromaKey.h  Jamfile  Languages.json
AddOns/Equaliser/: CMakeLists.txt  Effect_Equaliser.cpp  Effect_Equaliser.h  Jamfile  LICENSE  Languages.json  clean_all  orfanidis_eq.h
AddOns/Fade/: CMakeLists.txt  Effect_Fade.cpp  Effect_Fade.h  Jamfile  Languages.json  clean_all
AddOns/IIRFilter/: CMakeLists.txt  Effect_IIRFilter.cpp  Effect_IIRFilter.h  Jamfile  Languages.json  filters.h  fxobjects.cpp  fxobjects.h
AddOns/Wipe/: CMakeLists.txt  Effect_Wipe.cpp  Effect_Wipe.h  Jamfile  Languages.json  clean_all
Docs/: Effects.odt
Editor/: AboutWindow.cpp  AboutWindow.h  AudioCache.cpp  AudioCache.h  AudioManager.cpp  AudioManager.h  AudioManager_Output.cpp  AudioManager_Utility.cpp  AudioMixer.cpp  AudioMixer.h  ClipTagWindow.cpp  ClipTagWindow.h  ColourScope.cpp  ColourScope.h  ControlSource.cpp  ControlSource.h  CursorDefinitions.inc  EffectListItem.cpp  EffectListItem.h  EffectNode.cpp  EffectNode.h  EffectsManager.cpp  EffectsManager.h  EffectsManager_Plugin.cpp  EffectsTab.cpp  EffectsTab.h  EffectsWindow.cpp  EffectsWindow.h  ExportMediaWindow.cpp  ExportMediaWindow.h  ExportMedia_MediaKit.cpp  ExportMedia_MediaKit.h  ExportMedia_ffmpeg.cpp  ExportMedia_ffmpeg.h  FileUtility.cpp  FileUtility.h  ImageUtility.cpp  ImageUtility.h  Language.cpp  Language.h  (+68 more)
Effects/: Effect_AudioGain.cpp  Effect_AudioGain.h  Effect_BackgroundColour.cpp  Effect_BackgroundColour.h  Effect_Blur.cpp  Effect_Blur.h  Effect_Colour.cpp  Effect_Colour.h  Effect_ColourCorrection.cpp  Effect_ColourCorrection.h  Effect_ColourGrading.cpp  Effect_ColourGrading.h  Effect_ColourLut.cpp  Effect_ColourLut.h  Effect_Crop.cpp  Effect_Crop.h  Effect_Marker.cpp  Effect_Marker.h  Effect_Mask.cpp  Effect_Mask.h  Effect_Mirror.cpp  Effect_Mirror.h  Effect_Move.cpp  Effect_Move.h  Effect_None.cpp  Effect_None.h  Effect_ParticleTrail.cpp  Effect_ParticleTrail.h  Effect_Plugin.cpp  Effect_Plugin.h  Effect_PortraitBlur.cpp  Effect_PortraitBlur.h  Effect_Rotate.cpp  Effect_Rotate.h  Effect_Speed.cpp  Effect_Speed.h  Effect_Text.cpp  Effect_Text.h  Effect_Text_3D.cpp  Effect_Text_3D.h  (+6 more)
Gui/: AlphaColourControl.cpp  AlphaColourControl.h  BitmapButton.cpp  BitmapButton.h  BitmapCheckbox.cpp  BitmapCheckbox.h  CurvesView.cpp  CurvesView.h  DividerView.cpp  DividerView.h  DualSlider.cpp  DualSlider.h  FontPanel.cpp  FontPanel.h  KeyframeSlider.cpp  KeyframeSlider.h  LinkedSpinners.cpp  LinkedSpinners.h  ListViewToolTip.cpp  ListViewToolTip.h  Magnify.cpp  Magnify.h  PathView.cpp  PathView.h  ProgressBar.cpp  ProgressBar.h  Spinner.cpp  Spinner.h  ValueSlider.cpp  ValueSlider.h
Languages/: Deutsch.lang  English (Britain).lang  English (USA).lang  Español.lang  Français.lang  Indonesische.lang  Italiano.lang  Nederlands.lang  Português.lang  Русский.lang  Српски.lang
Plugins/Burn/: Burn.frag  Burn.plugin  Languages.json
Plugins/ChromaKey/: ChromaKey.frag  ChromaKey.plugin  Languages.json
Plugins/Circle/: Circle.frag  Circle.plugin  Languages.json
Plugins/EdgeDetect/: EdgeDetect.frag  EdgeDetect.plugin  Languages.json
Plugins/Fireworks/: Fireworks.frag  Fireworks.plugin  Languages.json
Plugins/Fireworks_Heart/: Fireworks_Heart.frag  Fireworks_Heart.plugin  Languages.json
Plugins/Flame/: Flame.frag  Flame.plugin  Languages.json
Plugins/Haze/: Haze.frag  Haze.plugin  Languages.json
Plugins/HighlightsAndShadows/: HighlightsAndShadows.frag  HighlightsAndShadows.plugin  Languages.json
Plugins/Iris/: Iris.frag  Iris.plugin  Languages.json
Plugins/Levels/: Languages.json  Levels.frag  Levels.plugin
Plugins/NightVision/: Languages.json  NightVision.frag  NightVision.plugin
Plugins/PageCurl/: Languages.json  PageCurl.frag  PageCurl.plugin
Plugins/PageCurl2/: Languages.json  PageCurl2.frag  PageCurl2.plugin
Plugins/Pixelate/: Languages.json  Pixelate.frag  Pixelate.plugin
Plugins/RadialBlur/: Languages.json  RadialBlur.frag  RadialBlur.plugin
Plugins/ShockWave/: Languages.json  ShockWave.frag  ShockWave.plugin
Plugins/Sketch/: Languages.json  Sketch.frag  Sketch.plugin
Plugins/SlotMachine/: Languages.json  SlotMachine.frag  SlotMachine.plugin
Plugins/SplitView/: Languages.json  SplitView.frag  SplitView.plugin
Plugins/SrgbGamma/: Languages.json  SrgbGamma.frag  SrgbGamma.plugin
Plugins/Swap/: Languages.json  Swap.frag  Swap.plugin
Plugins/Vignette/: Languages.json  Vignette.frag  Vignette.plugin
Plugins/WindowBlinds/: Languages.json  WindowBlinds.frag  WindowBlinds.plugin
Resources/Icon/: Medo_Icon  Medo_icon.rdef  Medo_icon.rsrc
Resources/Icon_Camera/: Medo_icon.rdef  Medo_icon.rsrc
Yarra/: FileManager.h  Platform.h  Y_FTGL_Font.frag  Y_FTGL_Font.vert  Y_MinimalShader.frag  Y_MinimalShader.vert
Yarra/FTGL/: FTGLExtrdFont.h  ftgl.h
Yarra/FileIO/: FileManager.cpp
Yarra/FreeTypeGL/: FTContour.cpp  FTExtrudeFont.cpp  FTExtrudeGlyph.cpp  FTExtrudeGlyphImpl.h  FTFont.cpp  FTInternals.h  FTLayout.cpp  FTTextureFont.cpp  FTTextureGlyph.cpp  FTUnicode.h  FTVectoriser.cpp  config.h
Yarra/Math/: Interpolation.cpp  Interpolation.h  Math.cpp  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Matrix_Software.cpp  Matrix_x86.cpp  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
Yarra/Platform/: Platform_Haiku.cpp
Yarra/Render/: Camera.cpp  Camera.h  Font.h  FontFreetype.cpp  GeometryNode.cpp  MatrixStack.cpp  MatrixStack.h  Picture.cpp  Picture.h  RenderDefinitions.h  RenderNode.cpp  RenderTarget.cpp  RenderTarget.h  SceneNode.h  Shader.cpp  Shader.h  Spatial.cpp  TextScene.cpp  Texture.cpp  Texture.h
(+5 files in other folders)
